GNOME Bugzilla – Bug 614923
suncc compile fails on gdaui-entry-wrapper.c
Last modified: 2010-04-06 17:06:45 UTC
Like bug #614922, libgda fails to build with suncc under OpenSolaris. $ make /opt/SunStudioExpress/bin/cc "-DPACKAGE_NAME=\"GNU Data Access\"" -DPACKAGE_TARNAME=\"libgda\" -DPACKAGE_VERSION=\"4.1.5\" "-DPACKAGE_STRING=\"GNU Data Access 4.1.5\"" -DPACKAGE_BUGREPORT=\"gnome-db-list@gnome.org\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DSIZEOF_UNSIGNED_INT=4 -DSIZEOF_UNSIGNED_LONG_INT=4 -DSTDC_HEADERS=1 -DHAVE_DLFCN_H=1 -DGETTEXT_PACKAGE=\"libgda-4.0\" -DHAVE_LOCALE_H=1 -DHAVE_LC_MESSAGES=1 -DHAVE_BIND_TEXTDOMAIN_CODESET=1 -DHAVE_GETTEXT=1 -DHAVE_DCGETTEXT=1 -DENABLE_NLS=1 -DHAVE_UI=1 -DHAVE_GTKSOURCEVIEW=1 -DHAVE_UNIQUE=1 -DISO_CODES_PREFIX=\"/usr\" "-DENABLE_BINRELOC=/**/" -DHAVE_LIBPTHREAD=1 -DBR_PTHREAD=1 -DHAVE_LDAP=1 -DHAVE_JAVA=1 -DHAVE_LIBSOUP=1 -DHAVE_READLINE=1 -DHAVE_HISTORY=1 -DGDA_DEBUG=1 -I. -I../.. -I../../libgda -I./.. -I../.. -I../../libgda-ui -D_REENTRANT -D_PTHREADS -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/libxml2 -DLIBGDA_ABI_NAME=\"libgda-4.0\" -D_REENTRANT -D_POSIX_PTHREAD_SEMANTICS -D_PTHREADS -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12 -D_REENTRANT -D_PTHREADS -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -DHAVE_GIO -DPREFIX=\"/usr\" -DSYSCONFDIR=\"/etc\" -DDATADIR=\"/usr/share\" -DLIBDIR=\"/usr/lib\" -g -c gdaui-entry-wrapper.c -KPIC -DPIC -o .libs/gdaui-entry-wrapper.o "gdaui-entry-wrapper.c", line 132: warning: assignment type mismatch: pointer to function(pointer to struct _GdauiDataEntry {}, enum {GDA_VALUE_ATTR_UNUSED(512), GDA_VALUE_ATTR_NO_MODIF(256), GDA_VALUE_ATTR_HAS_VALUE_ORIG(128), GDA_VALUE_ATTR_DATA_NON_VALID(64), GDA_VALUE_ATTR_ACTIONS_SHOWN(32), GDA_VALUE_ATTR_IS_UNCHANGED(16), GDA_VALUE_ATTR_CAN_BE_DEFAULT(8), GDA_VALUE_ATTR_IS_DEFAULT(4), GDA_VALUE_ATTR_CAN_BE_NULL(2), GDA_VALUE_ATTR_IS_NULL(1), GDA_VALUE_ATTR_NONE(0)}, enum {GDA_VALUE_ATTR_UNUSED(512), GDA_VALUE_ATTR_NO_MODIF(256), GDA_VALUE_ATTR_HAS_VALUE_ORIG(128), GDA_VALUE_ATTR_DATA_NON_VALID(64), GDA_VALUE_ATTR_ACTIONS_SHOWN(32), GDA_VALUE_ATTR_IS_UNCHANGED(16), GDA_VALUE_ATTR_CAN_BE_DEFAULT(8), GDA_VALUE_ATTR_IS_DEFAULT(4), GDA_VALUE_ATTR_CAN_BE_NULL(2), GDA_VALUE_ATTR_IS_NULL(1), GDA_VALUE_ATTR_NONE(0)}) returning void "=" pointer to function(pointer to struct _GdauiDataEntry {}, enum {GDA_VALUE_ATTR_UNUSED(512), GDA_VALUE_ATTR_NO_MODIF(256), GDA_VALUE_ATTR_HAS_VALUE_ORIG(128), GDA_VALUE_ATTR_DATA_NON_VALID(64), GDA_VALUE_ATTR_ACTIONS_SHOWN(32), GDA_VALUE_ATTR_IS_UNCHANGED(16), GDA_VALUE_ATTR_CAN_BE_DEFAULT(8), GDA_VALUE_ATTR_IS_DEFAULT(4), GDA_VALUE_ATTR_CAN_BE_NULL(2), GDA_VALUE_ATTR_IS_NULL(1), GDA_VALUE_ATTR_NONE(0)}, unsigned int) returning void "gdaui-entry-wrapper.c", line 606: identifier redeclared: gdaui_entry_wrapper_set_attributes current : static function(pointer to struct _GdauiDataEntry {}, unsigned int, unsigned int) returning void previous: function(pointer to struct _GdauiDataEntry {}, enum {GDA_VALUE_ATTR_UNUSED(512), GDA_VALUE_ATTR_NO_MODIF(256), GDA_VALUE_ATTR_HAS_VALUE_ORIG(128), GDA_VALUE_ATTR_DATA_NON_VALID(64), GDA_VALUE_ATTR_ACTIONS_SHOWN(32), GDA_VALUE_ATTR_IS_UNCHANGED(16), GDA_VALUE_ATTR_CAN_BE_DEFAULT(8), GDA_VALUE_ATTR_IS_DEFAULT(4), GDA_VALUE_ATTR_CAN_BE_NULL(2), GDA_VALUE_ATTR_IS_NULL(1), GDA_VALUE_ATTR_NONE(0)}, unsigned int) returning void : "gdaui-entry-wrapper.c", line 53 "gdaui-entry-wrapper.c", line 53: warning: static function called but not defined: gdaui_entry_wrapper_set_attributes() cc: acomp failed for gdaui-entry-wrapper.c make[3]: *** [gdaui-entry-wrapper.lo] Error 1 make[3]: Leaving directory `/export/home/halton/work/projects/gnome/libgda/libgda/libgda-ui/data-entries'
Created attachment 158017 [details] [review] patch for bug #6149223
It's now in git/master, thanks!