Correct declaration of gdaui_entry_wrapper_set_attributes()

From Halton Huo <halton.huo@sun.com>
Fixes for https://bugzilla.gnome.org/show_bug.cgi?id=614923